syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package flyguide;

service FlyGuide {
    rpc GetFly(FlyId) returns ( GetAllFly) {}
}

message FlyId {
    string  name_origin = 1;
    string  name_destiny = 2;
}

message GetAllFly {
    repeated Fly flies = 1;
}

message Fly {
    FlyId fly_id = 1;
    string name = 2;
    string description = 3;
    int32 fly_number = 4;
}

message FlyRange {
    FlyId from = 1;
    FlyId to = 2;
}